src/BulletSharpPInvoke/Collision/CollisionWorld.cs


		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btCollisionWorld_ClosestRayResultCallback_new([In] ref Vector3 rayFromWorld, [In] ref Vector3 rayToWorld);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestRayResultCallback_getHitNormalWorld(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestRayResultCallback_getHitPointWorld(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestRayResultCallback_getRayFromWorld(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestRayResultCallback_getRayToWorld(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestRayResultCallback_setHitNormalWorld(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestRayResultCallback_setHitPointWorld(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestRayResultCallback_setRayFromWorld(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestRayResultCallback_setRayToWorld(IntPtr obj, [In] ref Vector3 value);
	}

	public class AllHitsRayResultCallback : RayResultCallback
	{
		AlignedVector3Array _hitNormalWorld, _hitPointWorld;
		AlignedCollisionObjectArray _collisionObjects;

		internal AllHitsRayResultCallback(IntPtr native)
			: base(native)
		{
		}

		public AllHitsRayResultCallback(Vector3 rayFromWorld, Vector3 rayToWorld)
			: base(btCollisionWorld_AllHitsRayResultCallback_new(ref rayFromWorld, ref rayToWorld))
		{
		}

		public AlignedCollisionObjectArray CollisionObjects
		{
			get
			{
				if (_collisionObjects == null)
				{
					_collisionObjects = new AlignedCollisionObjectArray(btCollisionWorld_AllHitsRayResultCallback_getCollisionObjects(_native), true);
				}
				return _collisionObjects;
			}
		}
		/*
		public AlignedFloatArray HitFractions
		{
			get { return btCollisionWorld_AllHitsRayResultCallback_getHitFractions(_native); }
			set { btCollisionWorld_AllHitsRayResultCallback_setHitFractions(_native, value._native); }
		}
		*/
		public AlignedVector3Array HitNormalWorld
		{
			get
			{
				if (_hitNormalWorld == null)
				{
					_hitNormalWorld = new AlignedVector3Array(btCollisionWorld_AllHitsRayResultCallback_getHitNormalWorld(_native), true);
				}
				return _hitNormalWorld;
			}
		}

		public AlignedVector3Array HitPointWorld
		{
			get
			{
				if (_hitPointWorld == null)
				{
					_hitPointWorld = new AlignedVector3Array(btCollisionWorld_AllHitsRayResultCallback_getHitPointWorld(_native), true);
				}
				return _hitPointWorld;
			}
		}

		public Vector3 RayFromWorld
		{
			get
			{
				Vector3 value;
				btCollisionWorld_AllHitsRayResultCallback_getRayFromWorld(_native, out value);
				return value;
			}
			set { btCollisionWorld_AllHitsRayResultCallback_setRayFromWorld(_native, ref value); }
		}

		public Vector3 RayToWorld
		{
			get
			{
				Vector3 value;
				btCollisionWorld_AllHitsRayResultCallback_getRayToWorld(_native, out value);
				return value;
			}
			set { btCollisionWorld_AllHitsRayResultCallback_setRayToWorld(_native, ref value); }
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btCollisionWorld_AllHitsRayResultCallback_new([In] ref Vector3 rayFromWorld, [In] ref Vector3 rayToWorld);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btCollisionWorld_AllHitsRayResultCallback_getCollisionObjects(IntPtr obj);

	    [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btCollisionWorld_AllHitsRayResultCallback_getHitNormalWorld(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btCollisionWorld_AllHitsRayResultCallback_getHitPointWorld(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_AllHitsRayResultCallback_getRayFromWorld(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_AllHitsRayResultCallback_getRayToWorld(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_AllHitsRayResultCallback_setRayFromWorld(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_AllHitsRayResultCallback_setRayToWorld(IntPtr obj, [In] ref Vector3 value);
	}

	public class LocalConvexResult : IDisposable
	{
		internal IntPtr _native;

		internal LocalConvexResult(IntPtr native)
		{
			_native = native;
		}

		public LocalConvexResult(CollisionObject hitCollisionObject, LocalShapeInfo localShapeInfo, Vector3 hitNormalLocal, Vector3 hitPointLocal, float hitFraction)
		{
			_native = btCollisionWorld_LocalConvexResult_new(hitCollisionObject._native, localShapeInfo._native, ref hitNormalLocal, ref hitPointLocal, hitFraction);
		}

		public CollisionObject HitCollisionObject
		{
			get { return CollisionObject.GetManaged(btCollisionWorld_LocalConvexResult_getHitCollisionObject(_native)); }
			set { btCollisionWorld_LocalConvexResult_setHitCollisionObject(_native, value._native); }
		}

		public float HitFraction
		{
			get { return btCollisionWorld_LocalConvexResult_getHitFraction(_native); }
			set { btCollisionWorld_LocalConvexResult_setHitFraction(_native, value); }
		}

		public Vector3 HitNormalLocal
		{
			get
			{
				Vector3 value;
				btCollisionWorld_LocalConvexResult_getHitNormalLocal(_native, out value);
				return value;
			}
			set { btCollisionWorld_LocalConvexResult_setHitNormalLocal(_native, ref value); }
		}

		public Vector3 HitPointLocal
		{
			get
			{
				Vector3 value;
				btCollisionWorld_LocalConvexResult_getHitPointLocal(_native, out value);
				return value;
			}
			set { btCollisionWorld_LocalConvexResult_setHitPointLocal(_native, ref value); }
		}

		public LocalShapeInfo LocalShapeInfo
		{
			get { return new LocalShapeInfo(btCollisionWorld_LocalConvexResult_getLocalShapeInfo(_native)); }
			set { btCollisionWorld_LocalConvexResult_setLocalShapeInfo(_native, value._native); }
		}

		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btCollisionWorld_LocalConvexResult_delete(_native);
				_native = IntPtr.Zero;
			}
		}

		~LocalConvexResult()
		{
			Dispose(false);
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btCollisionWorld_LocalConvexResult_new(IntPtr hitCollisionObject, IntPtr localShapeInfo, [In] ref Vector3 hitNormalLocal, [In] ref Vector3 hitPointLocal, float hitFraction);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btCollisionWorld_LocalConvexResult_getHitCollisionObject(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btCollisionWorld_LocalConvexResult_getHitFraction(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_LocalConvexResult_getHitNormalLocal(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_LocalConvexResult_getHitPointLocal(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btCollisionWorld_LocalConvexResult_getLocalShapeInfo(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_LocalConvexResult_setHitCollisionObject(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_LocalConvexResult_setHitFraction(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_LocalConvexResult_setHitNormalLocal(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_LocalConvexResult_setHitPointLocal(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_LocalConvexResult_setLocalShapeInfo(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_LocalConvexResult_delete(IntPtr obj);
	}

	public class ConvexResultCallback : IDisposable
	{
		internal IntPtr _native;

		internal ConvexResultCallback(IntPtr native)
		{
			_native = native;
		}

		public float AddSingleResult(LocalConvexResult convexResult, bool normalInWorldSpace)
		{
			return btCollisionWorld_ConvexResultCallback_addSingleResult(_native, convexResult._native, normalInWorldSpace);
		}

		public bool NeedsCollision(BroadphaseProxy proxy0)
		{
			return btCollisionWorld_ConvexResultCallback_needsCollision(_native, proxy0._native);
		}

		public float ClosestHitFraction
		{
			get { return btCollisionWorld_ConvexResultCallback_getClosestHitFraction(_native); }
			set { btCollisionWorld_ConvexResultCallback_setClosestHitFraction(_native, value); }
		}

		public CollisionFilterGroups CollisionFilterGroup
		{
			get { return (CollisionFilterGroups)btCollisionWorld_ConvexResultCallback_getCollisionFilterGroup(_native); }
			set { btCollisionWorld_ConvexResultCallback_setCollisionFilterGroup(_native, (short)value); }
		}

		public CollisionFilterGroups CollisionFilterMask
		{
			get { return (CollisionFilterGroups)btCollisionWorld_ConvexResultCallback_getCollisionFilterMask(_native); }
			set { btCollisionWorld_ConvexResultCallback_setCollisionFilterMask(_native, (short)value); }
		}

		public bool HasHit
		{
			get { return btCollisionWorld_ConvexResultCallback_hasHit(_native); }
		}

		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btCollisionWorld_ConvexResultCallback_delete(_native);
				_native = IntPtr.Zero;
			}
		}

		~ConvexResultCallback()
		{
			Dispose(false);
		}
